--- a/snippets/breadcrumbs.liquid
+++ b/snippets/breadcrumbs.liquid
@@ -1,5 +1,5 @@
 {% unless template == 'index' or template == 'cart' or template == 'list-collections' %}
-<nav class="mb-5" role="navigation" aria-label="breadcrumbs">
+<nav class="mb-5 position-relative" role="navigation" aria-label="breadcrumbs">
   <ol class="breadcrumb bg-white d-flex justify-content-center">
     <li class="breadcrumb-item"><a href="/">Home</a></li>
     {% if template contains 'page' %}
